Added new changes

--- a/Website/index.html
+++ b/Website/index.html
@@ -192,7 +192,7 @@
     <header>
         <div class="top-bar">
             <div class="brand-logo">
-                <img src="cloudline.jpg" alt="Cloudline Express Logo" class="header-logo">
+                <img src="Images/cloudline_logo.png" alt="Cloudline Express Logo" class="header-logo">
             </div>
             <button class="hamburger" id="hamburger" aria-label="Toggle menu">
                 <span></span>
