changed email ID

--- a/Website/index.html
+++ b/Website/index.html
@@ -27,7 +27,7 @@
                 </svg>
                 +971 55 772 1239
             </a>
-            <a href="mailto:cloudlineexpress@gmail.com" class="contact-item contact-link">
+            <a href="mailto:info@cloudlineexpress.com" class="contact-item contact-link">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" style="display: inline-block; vertical-align: middle; margin-right: 5px;">
                     <path fill="#EA4335" d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L12 9.545l8.073-6.052C21.69 2.28 24 3.434 24 5.457z"/>
                     <path fill="#34A853" d="M0 19.366V5.457L12 13.818z"/>
@@ -35,7 +35,7 @@
                     <path fill="#C5221F" d="M1.636 21.002h3.819V11.73L0 5.457v13.909c0 .904.732 1.636 1.636 1.636z"/>
                     <path fill="#FBBC04" d="M18.545 21.002h3.819c.904 0 1.636-.732 1.636-1.636V5.457l-5.455 6.273z"/>
                 </svg>
-                cloudlineexpress@gmail.com</a>
+                info@cloudlineexpress.com</a>
             <a href="https://instagram.com/cloudline_express" target="_blank" class="contact-item contact-link">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" style="display: inline-block; vertical-align: middle; margin-right: 5px;">
                     <defs>
@@ -431,10 +431,10 @@
                     <p>+971 55 772 1239</p>
                 </a>
                 
-                <a href="mailto:cloudlineexpress@gmail.com" class="contact-option">
+                <a href="mailto:info@cloudlineexpress.com" class="contact-option">
                     <div class="contact-icon">✉️</div>
                     <h3>Email</h3>
-                    <p>cloudlineexpress@gmail.com</p>
+                    <p>info@cloudlineexpress.com</p>
                 </a>
                 
                 <a href="https://instagram.com/cloudline_express" target="_blank" class="contact-option">
